// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Send – TransactionForm render should render error on ens error 1`] = `
<v-form id="sendEther" data-test="transaction-send-form" v-on:submit="bound handleFormSubmit">
    <div class="field">
        <label class="label">
            To
        </label>
        <account-chooser creatable="true" width="35" placeholder="0x... or ENS" data-test="transaction-address-select" v-model="address"></account-chooser>
        <!---->
        <p class="help is-danger">
            foo
        </p>
    </div>
    <transaction-amount-options current-token="[object Object]" fiat-currency="USD" eth-price="10" balance="1000000" estimated-gas-cost="0" disabled="true" active-net="[object Object]" v-on:change-token="bound changeTokenInfo" v-model="transaction.value"></transaction-amount-options>
    <transaction-priority-options v-model="transaction.gasPrice" prices="[object Object]"></transaction-priority-options>
    <transaction-advanced-options v-on:change="bound handleAdvancedChange"></transaction-advanced-options>
    <div class="field is-horizontal">
        <div class="field-label"></div>
        <div class="field-body">
            <v-button disabled="true" class-name="is-success is-medium is-cta" data-test="transaction-send-button">
                Send
            </v-button>
        </div>
    </div>
</v-form>
`;

exports[`Send – TransactionForm render should render message if ens address resolved 1`] = `
<v-form id="sendEther" data-test="transaction-send-form" v-on:submit="bound handleFormSubmit">
    <div class="field">
        <label class="label">
            To
        </label>
        <account-chooser creatable="true" width="35" placeholder="0x... or ENS" data-test="transaction-address-select" v-model="address"></account-chooser>
        <p class="help ellipsis">
            Resolved ENS address: 0xB14Ab53E38DA1C172f877DBC6d65e4a1B0474C3c
        </p>
        <!---->
    </div>
    <transaction-amount-options current-token="[object Object]" fiat-currency="USD" eth-price="10" balance="1000000" estimated-gas-cost="0" disabled="true" active-net="[object Object]" v-on:change-token="bound changeTokenInfo" v-model="transaction.value"></transaction-amount-options>
    <transaction-priority-options is-loading="true" v-model="transaction.gasPrice"></transaction-priority-options>
    <transaction-advanced-options v-on:change="bound handleAdvancedChange"></transaction-advanced-options>
    <div class="field is-horizontal">
        <div class="field-label"></div>
        <div class="field-body">
            <v-button disabled="true" class-name="is-success is-medium is-cta" data-test="transaction-send-button">
                Send
            </v-button>
        </div>
    </div>
</v-form>
`;

exports[`Send – TransactionForm render should render without error and resolved address by default 1`] = `
<v-form id="sendEther" data-test="transaction-send-form" v-on:submit="bound handleFormSubmit">
    <div class="field">
        <label class="label">
            To
        </label>
        <account-chooser creatable="true" width="35" placeholder="0x... or ENS" data-test="transaction-address-select" v-model="address"></account-chooser>
        <!---->
        <!---->
    </div>
    <transaction-amount-options current-token="[object Object]" fiat-currency="USD" eth-price="10" balance="1000000" estimated-gas-cost="0" disabled="true" active-net="[object Object]" v-on:change-token="bound changeTokenInfo" v-model="transaction.value"></transaction-amount-options>
    <transaction-priority-options v-model="transaction.gasPrice" prices="[object Object]"></transaction-priority-options>
    <transaction-advanced-options v-on:change="bound handleAdvancedChange"></transaction-advanced-options>
    <div class="field is-horizontal">
        <div class="field-label"></div>
        <div class="field-body">
            <v-button disabled="true" class-name="is-success is-medium is-cta" data-test="transaction-send-button">
                Send
            </v-button>
        </div>
    </div>
</v-form>
`;
